Facet: Move filter to above facets. Fix spacing issues.

--- a/source/sass/components/@health/_health-facet.scss
+++ b/source/sass/components/@health/_health-facet.scss
@@ -7,8 +7,12 @@
 
   @include AU-space(padding, 1unit);
 
+  // Spacing.
   * + & {
     @include AU-space(margin-top, 1unit);
+  }
+  .health-filter + & {
+    margin-top: 0;
   }
 
   &--mobile-hidden {
